<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="30sp"
        android:textColor="#000000"
        android:layout_marginBottom="50dp"
        android:id="@+id/CAPTION_TEXTVIEW"
        android:text="@string/MainActivityCaption" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="#000000"
        android:id="@+id/MAJOR_TEXTVIEW"
        android:layout_marginBottom="50dp"
        android:layout_below="@+id/CAPTION_TEXTVIEW"
        android:text="@string/MainActivityMajorText" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="#000000"
        android:id="@+id/MINOR_TEXTVIEW"
        android:layout_marginBottom="50dp"
        android:layout_below="@+id/MAJOR_TEXTVIEW"
        android:text="@string/MainActivityMinorText" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="#000000"
        android:id="@+id/PROFILE_TEXTVIEW"
        android:layout_marginBottom="50dp"
        android:layout_below="@+id/MINOR_TEXTVIEW"
        android:text="@string/MainActivityProfileText" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="#000000"
        android:id="@+id/USECASE_TEXTVIEW"
        android:layout_marginBottom="50dp"
        android:layout_below="@+id/PROFILE_TEXTVIEW"
        android:text="@string/MainActivityUseCaseText" />

    <EditText
        android:layout_marginLeft="20dp"
        android:layout_below="@+id/CAPTION_TEXTVIEW"
        android:layout_toEndOf="@+id/MAJOR_TEXTVIEW"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/MAJOR_TEXTFIELD"
        tools:ignore="RtlCompat,RtlHardcoded" />

    <EditText
        android:layout_marginLeft="20dp"
        android:layout_below="@+id/MAJOR_TEXTVIEW"
        android:layout_toEndOf="@+id/MINOR_TEXTVIEW"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/MINOR_TEXTFIELD"
        tools:ignore="RtlCompat,RtlHardcoded" />

    <EditText
        android:layout_marginLeft="20dp"
        android:layout_below="@+id/MINOR_TEXTVIEW"
        android:layout_toEndOf="@+id/PROFILE_TEXTVIEW"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/PROFILE_TEXTFIELD"
        tools:ignore="RtlCompat,RtlHardcoded" />

    <EditText
        android:layout_marginLeft="20dp"
        android:layout_below="@+id/PROFILE_TEXTVIEW"
        android:layout_toEndOf="@+id/PROFILE_TEXTVIEW"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/USECASE_TEXTFIELD"
        tools:ignore="RtlCompat,RtlHardcoded" />

    <Button
        android:layout_below="@+id/USECASE_TEXTFIELD"
        android:layout_centerHorizontal="true"
        android:onClick="setBeacon"
        android:layout_marginTop="20dp"
        android:text="@string/MainActivitySetButtonText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button4" />

    <ProgressBar
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/PROGRESS_BAR"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/MainActivityGetButtonText"
        android:id="@+id/button"
        android:onClick="navigateToGetBeaconActivity"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/MainActivityGetIntentButtonText"
        android:id="@+id/button2"
        android:onClick="removeBeacon"
        android:layout_alignBottom="@+id/button"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/MainActivityListButtonText"
        android:id="@+id/button3"
        android:onClick="listBeacons"
        android:layout_alignTop="@+id/button"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
